.cloud/public/kubernetes/services/ingress/extern_name.yml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: deployment
spec:
  type: ExternalName
  externalName: argo-cd-argocd-server.default.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  namespace: deployment
spec:
  type: ExternalName
  externalName: phpmyadmin.default.svc.cluster.local
