.cloud/public/kubernetes/services/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: deployment
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 20480m
spec:
  ingressClassName: nginx
  rules:
    - host: registry.area.tech.showmyteam.fr
      http:
        paths:
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: docker-registry
                port:
                  number: 5000
